[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/sheetstoframes/ImportDialog.gd" type="Script" id=1]

[node name="Dialog" type="Control"]
anchor_left = 0.000241025
anchor_right = 1.00024
anchor_bottom = 1.0
margin_left = 0.961548
margin_top = 0.542145
margin_right = 0.961548
margin_bottom = 0.542114
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportSettingsDialog" type="WindowDialog" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1223.0
margin_bottom = -756.0
window_title = "Import Settings"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ImportSettingsDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="ImportSettingsDialog/VBoxContainer"]
margin_right = 696.0
margin_bottom = 30.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ImportSettingsDialog/VBoxContainer/MarginContainer3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 686.0
margin_bottom = 30.0
alignment = 2

[node name="LoadPresetButton" type="Button" parent="ImportSettingsDialog/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 499.0
margin_right = 586.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Load Preset"

[node name="SavePresetButton" type="Button" parent="ImportSettingsDialog/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 590.0
margin_right = 676.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Save Preset"

[node name="MarginContainer" type="MarginContainer" parent="ImportSettingsDialog/VBoxContainer"]
margin_top = 34.0
margin_right = 696.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="ImportSettingsDialog/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 676.0
margin_bottom = 236.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer"]
margin_right = 656.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="_HeadSpritesheet" type="Label" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_right = 114.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Spritesheet"
align = 1
valign = 1

[node name="_HeadColumns" type="Label" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 118.0
margin_right = 232.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Columns"
align = 1

[node name="_HeadRows" type="Label" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 236.0
margin_right = 350.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Rows"
align = 1

[node name="_HeadMaxmium" type="Label" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 354.0
margin_right = 536.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Maximum number of frames"
align = 1

[node name="_HeadFPS" type="Label" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 540.0
margin_right = 654.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "FPS"
align = 1

[node name="_Sep1" type="HSeparator" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 22.0

[node name="_Sep2" type="HSeparator" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 118.0
margin_top = 18.0
margin_right = 232.0
margin_bottom = 22.0

[node name="_Sep3" type="HSeparator" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 236.0
margin_top = 18.0
margin_right = 350.0
margin_bottom = 22.0

[node name="_Sep4" type="HSeparator" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 354.0
margin_top = 18.0
margin_right = 536.0
margin_bottom = 22.0

[node name="_Sep5" type="HSeparator" parent="ImportSettingsDialog/VBoxContainer/MarginContainer/ScrollContainer/GridContainer" groups=[
"_headers",
]]
margin_left = 540.0
margin_top = 18.0
margin_right = 654.0
margin_bottom = 22.0

[node name="MarginContainer2" type="MarginContainer" parent="ImportSettingsDialog/VBoxContainer"]
margin_top = 294.0
margin_right = 696.0
margin_bottom = 324.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="ImportSettingsDialog/VBoxContainer/MarginContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 691.0
margin_bottom = 25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="ImportSettingsDialog/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 143.0
margin_right = 197.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Cancel"

[node name="ImportButton" type="Button" parent="ImportSettingsDialog/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 487.0
margin_right = 543.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Import"

[node name="ImportCompleted" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Import completed"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ImportSettingsDialog/VBoxContainer/MarginContainer3/HBoxContainer/LoadPresetButton" to="." method="_on_LoadPresetButton_pressed"]
[connection signal="pressed" from="ImportSettingsDialog/VBoxContainer/MarginContainer3/HBoxContainer/SavePresetButton" to="." method="_on_SavePresetButton_pressed"]
[connection signal="pressed" from="ImportSettingsDialog/VBoxContainer/MarginContainer2/HBoxContainer/CancelButton" to="." method="_on_ImportDialog_CancelButton_pressed"]
[connection signal="pressed" from="ImportSettingsDialog/VBoxContainer/MarginContainer2/HBoxContainer/ImportButton" to="." method="_on_ImportButton_pressed"]
